--- a/FrameworkCode/UVFrameworkTemplate.uvprojx
+++ b/FrameworkCode/UVFrameworkTemplate.uvprojx
@@ -432,6 +432,11 @@
               <FileType>1</FileType>
               <FilePath>.\Source\TemplateFSM.c</FilePath>
             </File>
+            <File>
+              <FileName>AnsibleMain.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\AnsibleMain.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
