Changed XBee UART5 (PE4 and PE5) to UART3 (PC6 and PC7)

--- a/Ship/UVFrameworkTemplate.uvprojx
+++ b/Ship/UVFrameworkTemplate.uvprojx
@@ -423,19 +423,44 @@
               <FilePath>.\Source\EventCheckers.c</FilePath>
             </File>
             <File>
-              <FileName>TestHarnessService0.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>.\Source\TestHarnessService0.c</FilePath>
-            </File>
-            <File>
               <FileName>TemplateFSM.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\Source\TemplateFSM.c</FilePath>
             </File>
             <File>
-              <FileName>IMU_SPI.c</FileName>
+              <FileName>Init_UART.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\Source\IMU_SPI.c</FilePath>
+              <FilePath>.\Source\Init_UART.c</FilePath>
+            </File>
+            <File>
+              <FileName>MotorModule.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\MotorModule.c</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_MASTER.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\SHIP_MASTER.c</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_PIC_RX.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\SHIP_PIC_RX.c</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_PIC_TX.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\SHIP_PIC_TX.c</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_RX.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\SHIP_RX.c</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_TX.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\Source\SHIP_TX.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -538,24 +563,44 @@
               <FilePath>.\Headers\termio.h</FilePath>
             </File>
             <File>
-              <FileName>TestHarnessService0.h</FileName>
-              <FileType>5</FileType>
-              <FilePath>.\Headers\TestHarnessService0.h</FilePath>
-            </File>
-            <File>
               <FileName>ES_ShortTimer.h</FileName>
               <FileType>5</FileType>
               <FilePath>.\Headers\ES_ShortTimer.h</FilePath>
             </File>
             <File>
-              <FileName>IMU_SPI.h</FileName>
+              <FileName>Init_UART.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\Headers\IMU_SPI.h</FilePath>
+              <FilePath>.\Headers\Init_UART.h</FilePath>
             </File>
             <File>
-              <FileName>MPU9250_RegisterMap.h</FileName>
+              <FileName>MotorModule.h</FileName>
               <FileType>5</FileType>
-              <FilePath>.\Headers\MPU9250_RegisterMap.h</FilePath>
+              <FilePath>.\Headers\MotorModule.h</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_MASTER.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\SHIP_MASTER.h</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_PIC_RX.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\SHIP_PIC_RX.h</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_PIC_TX.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\SHIP_PIC_TX.h</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_RX.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\SHIP_RX.h</FilePath>
+            </File>
+            <File>
+              <FileName>SHIP_TX.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Headers\SHIP_TX.h</FilePath>
             </File>
           </Files>
         </Group>
